--- a/Assets/Styles/style.css
+++ b/Assets/Styles/style.css
@@ -14,7 +14,7 @@
     --bg-glass: #e6e6e688;
     --txt-color: #313131;
     --txt-color-2: #65676B;
-    --main-color: #00af83;
+    --main-color: #14C38E;
     --main-color-hover: #009b74;
     --box-shadow: #00000017;
 
@@ -83,7 +83,7 @@ body {
     font-size: var(--font-size-base);
     background-color: var(--bg-color-2);
     color: var(--txt-color);
-    height: 2000px;
+    overflow-x: hidden;
 }
 
 body.dark {
@@ -219,6 +219,27 @@ h6 {
 }
 
 /*--------------------------------------
+# Tooltips
+--------------------------------------*/
+.tooltip-inner {
+    text-align: center;
+    font-size: var(--font-size-small);
+    font-family: var(--base-font);
+    background-color: var(--bg-color-1);
+    color: var(--txt-color);
+    border-radius: var(--radius-big);
+}
+
+.tooltip {
+    width: auto;
+    margin-top: 20px;
+}
+
+.tooltip-arrow {
+    display: none !important;
+}
+
+/*--------------------------------------
 # Cards
 --------------------------------------*/
 .card {
@@ -235,6 +256,10 @@ h6 {
     object-fit: cover;
     object-position: center;
     padding: 5px;
+}
+
+.card .card-text {
+    cursor: pointer;
 }
 
 .card-footer {
@@ -409,7 +434,7 @@ h6 {
     font-size: var(--font-size-small) !important;
 }
 
-@keyframes my-fade-in {
+@keyframes fade-in {
     0% {
         transform: scale(0)
     }
@@ -419,7 +444,7 @@ h6 {
     }
 }
 
-@keyframes my-fade-out {
+@keyframes fade-out {
     0% {
         transform: scale(1);
     }
@@ -434,11 +459,11 @@ h6 {
 }
 
 .modal.fade.show {
-    animation-name: my-fade-in;
+    animation-name: fade-in;
 }
 
 .modal.fade {
-    animation-name: my-fade-out;
+    animation-name: fade-out;
 }
 
 /*==========================================================
@@ -534,7 +559,7 @@ header {
     margin-left: 30px;
 }
 
-.nav-link {
+.navbar .nav-link {
     font-family: var(--head-font);
     font-size: var(--font-size-small);
     padding: 3.5px 10px !important;
@@ -542,24 +567,45 @@ header {
     border-radius: var(--radius-huge);
     cursor: pointer;
     color: var(--txt-color);
+    width: max-content;
+
+    position: relative;
+    text-decoration: none;
 }
 
-.nav-link:hover {
+.navbar .nav-link::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    border-radius: 4px;
     background-color: var(--main-color);
-    color: #fff;
+    bottom: 0;
+    left: 0;
+    transform-origin: right;
+    transform: scaleX(0);
+    transition: transform .4s ease-in-out;
 }
 
-.nav-link.active {
-    color: var(--main-color) !important;
+.navbar .nav-link:hover::before {
+    transform-origin: left;
+    transform: scaleX(1);
 }
 
-.nav-link.active:hover {
-    color: #fff !important;
+.navbar .nav-link:hover {
+    color: var(--main-color);
 }
 
-.nav-link.show {
-    background-color: var(--main-color);
-    color: #fff !important;
+.navbar .nav-link.active {
+    color: var(--main-color);
+}
+
+.navbar .nav-link.active:hover {
+    color: var(--main-color);
+}
+
+.navbar .nav-link.show {
+    color: var(--main-color);
 }
 
 .navbar-expand-lg .navbar-nav .dropdown-menu {
@@ -1160,6 +1206,18 @@ label {
 }
 
 /*--------------------------------------
+# Transport section
+--------------------------------------*/
+.transport-section .card {
+    box-shadow: rgba(0, 0, 0, 0.1) -4px 9px 25px -6px;
+    transition: var(--transition-3);
+}
+
+.transport-section .card:hover {
+    transform: scale(1.04);
+}
+
+/*--------------------------------------
 # Food card Section
 --------------------------------------*/
 .food-section .card {
@@ -1213,51 +1271,120 @@ label {
 --------------------------------------*/
 .cta {
     background-color: var(--bg-color-1);
+    color: var(--txt-color);
+    border-radius: var(--radius-huge);
+}
+
+.cta h1 {
+    font-size: var(--font-size-more-big);
+}
+
+.cta p {
+    font-family: var(--base-font);
+    font-size: var(--font-size-base);
+}
+
+/*--------------------------------------------------------------
+# news
+--------------------------------------------------------------*/
+.news {
+    padding: 20px;
+    background-color: var(--bg-color-1);
+}
+
+.news .nav-tabs {
+    border: unset;
+}
+
+.news .news-container {
+    padding: 0;
+}
+
+.news .nav-link {
+    border: 0;
+    padding: 20px !important;
+    color: var(--txt-color-2);
+    background-color: unset;
+    cursor: pointer;
+    width: auto;
     border-radius: var(--radius-big);
+    font-family: var(--base-font);
+}
+
+.news .nav-link h4 {
+    font-size: var(--font-size-base);
+    transition: var(--transition-3);
+    color: var(--txt-color);
+    margin: 0;
+    font-family: var(--base-font);
+}
+
+.news .nav-link p {
+    font-size: var(--font-size-small);
+    margin-bottom: 0;
+    color: var(--txt-color-2);
+}
+
+.news .nav-link:hover {
+    background: var(--bg-color-2);
+    color: var(--main-color);
+}
+
+.news .nav-link:hover h4 {
+    color: var(--main-color);
+}
+
+.news .nav-link.active h4 {
+    color: var(--main-color);
+}
+
+.news .nav-link.active {
+    background: var(--bg-color-2);
+    color: var(--txt-color-1) !important;
+}
+
+.news .tab-pane.active {
+    animation: slide-down var(--transition-3) ease-in;
+}
+
+.news .tab-pane img {
+    float: left;
+    max-width: 300px;
+    border-radius: var(--radius-big);
+    margin-right: 30px;
+}
+
+@media (max-width: 768px) {
+    .news .tab-pane img {
+        float: none;
+        padding: 0 0 15px 0;
+        max-width: 100%;
+    }
+}
+
+.news .tab-pane h3 {
+    font-size: var(--font-size-big);
+    margin-bottom: 20px;
     color: var(--txt-color);
 }
 
-
-
-/*--------------------------------------
-# add your product
---------------------------------------*/
-.add-your-product .img-main-div {
-    display: grid;
+.news .tab-pane p {
+    color: var(--txt-color-2);
+    margin-left: 10px !important;
 }
 
-.add-your-product img {
-    max-width: 150px;
-    min-width: 150px;
-    min-height: 150px;
-    max-height: 150px;
-    margin: auto;
-    border: 2px solid var(--main-color);
-    margin-top: 15px;
-    margin-bottom: 5px;
-    border-radius: var(--radius-round);
+.news .tab-pane p:last-child {
+    margin-bottom: 0;
 }
 
-.add-your-product .add-icon {
-    position: relative;
-    top: -10px;
-    left: 10%;
-    transform: translate(-50%, -50%);
-    margin: auto;
-    width: 45px;
-    display: flex;
-    height: 45px;
-    justify-content: center;
-    align-items: center;
-    font-size: 45px;
-    border: 27px solid var(--bg-color-1);
-    border-radius: 50%;
-    color: var(--main-color);
-}
+@keyframes slide-down {
+    0% {
+        opacity: 0;
+    }
 
-.add-your-product .card-text {
-    font-family: var(--head-font);
-    color: var(--main-color);
+    100% {
+        opacity: 1;
+    }
 }
 
 /*--------------------------------------
@@ -1289,6 +1416,285 @@ label {
     left: -8px;
     font-size: var(--font-size-smallest);
     color: #fff;
+}
+
+/*--------------------------------------------------------------
+# Contact
+--------------------------------------------------------------*/
+.contact {
+    background-color: var(--bg-color-1);
+}
+
+.contact .info-box {
+    color: var(--txt-color);
+    text-align: center;
+    padding: 20px 0 30px 0;
+    border-radius: var(--radius-huge);
+    background-color: var(--bg-color-2);
+    font-family: var(--base-font);
+}
+
+.contact .info-box i {
+    font-size: var(--base-font-size);
+    color: var(--main-color);
+    border-radius: 50%;
+    padding: 8px;
+    width: 35px;
+    height: 35px;
+    border: 2px dotted #00af83;
+}
+
+.contact .info-box h3 {
+    font-size: var(--font-size-base);
+    color: var(--txt-color);
+    font-weight: 700;
+    margin: 10px 0;
+}
+
+.contact .info-box p {
+    padding: 0;
+    line-height: 24px;
+    font-size: 14px;
+    margin-bottom: 0;
+    color: var(--txt-color-2);
+}
+
+.contact .php-email-form {
+    padding: 30px;
+    background-color: var(--bg-color-2);
+    border-radius: var(--radius-huge);
+}
+
+@media (max-width: 768px) {
+    .php-email-form {
+        margin-top: 20px;
+    }
+}
+
+.contact .php-email-form .error-message {
+    display: none;
+    color: #fff;
+    background: #ed3c0d;
+    text-align: left;
+    padding: 15px;
+    font-weight: 600;
+}
+
+.contact .php-email-form .error-message br+br {
+    margin-top: 25px;
+}
+
+.contact .php-email-form .sent-message {
+    display: none;
+    color: #fff;
+    background: #18d26e;
+    text-align: center;
+    padding: 15px;
+    font-weight: 600;
+}
+
+.contact .php-email-form .loading {
+    display: none;
+    background: var(--bg-color-2);
+    text-align: center;
+    padding: 15px;
+}
+
+.contact .php-email-form .loading:before {
+    content: "";
+    display: inline-block;
+    border-radius: 50%;
+    width: 24px;
+    height: 24px;
+    margin: 0 10px -6px 0;
+    border: 3px solid red;
+    border-top-color: #eee;
+    animation: animate-loading 1s linear infinite;
+}
+
+.contact .php-email-form input,
+.contact .php-email-form textarea {
+    font-size: 14px;
+    background-color: var(--bg-color-1);
+    border-radius: var(--radius-medium);
+    color: var(--txt-color);
+    border-color: var(--bg-glass);
+    font-family: var(--base-font);
+}
+
+.contact .php-email-form input::placeholder,
+.contact .php-email-form textarea::placeholder {
+    color: var(--txt-color);
+}
+
+.contact .php-email-form input {
+    padding: 10px 15px;
+}
+
+.contact .php-email-form input:focus,
+.contact .php-email-form textarea:focus {
+    border-color: var(--main-color);
+}
+
+.contact .php-email-form textarea {
+    padding: 12px 15px;
+}
+
+@keyframes animate-loading {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+/*--------------------------------------------------------------
+# Footer
+--------------------------------------------------------------*/
+#footer {
+    background: var(--bg-color-1);
+    padding: 0 0 30px 0;
+    color: var(--txt-color);
+    font-size: 14px;
+}
+
+#footer .footer-top {
+    background: var(--bg-color-1);
+    padding: 60px 0 30px 0;
+}
+
+#footer .footer-top .footer-info {
+    margin-bottom: 30px;
+}
+
+#footer .footer-top .footer-info h3 {
+    font-size: 24px;
+    margin: 0 0 20px 0;
+    padding: 2px 0 2px 0;
+    line-height: 1;
+    font-weight: 700;
+}
+
+#footer .footer-top .footer-info p {
+    font-size: 14px;
+    line-height: 24px;
+    margin-bottom: 0;
+    font-family: "Roboto", sans-serif;
+}
+
+#footer .footer-top .social-links a {
+    font-size: 18px;
+    display: inline-block;
+    background: var(--main-color);
+    color: #fff;
+    line-height: 1;
+    padding: 8px 0;
+    margin-right: 4px;
+    border-radius: 4px;
+    text-align: center;
+    width: 36px;
+    height: 36px;
+    transition: 0.3s;
+}
+
+#footer .footer-top .social-links a:hover {
+    background: var(--main-color-hover);
+    text-decoration: none;
+}
+
+#footer .footer-top h4 {
+    font-size: 16px;
+    font-weight: 600;
+    position: relative;
+    padding-bottom: 12px;
+}
+
+#footer .footer-top .footer-links {
+    margin-bottom: 30px;
+}
+
+#footer .footer-top .footer-links ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+#footer .footer-top .footer-links ul i {
+    padding-right: 2px;
+    color: var(--main-color);
+    font-size: 18px;
+    line-height: 1;
+}
+
+#footer .footer-top .footer-links ul li {
+    padding: 10px 0;
+    display: flex;
+    align-items: center;
+}
+
+#footer .footer-top .footer-links ul li:first-child {
+    padding-top: 0;
+}
+
+#footer .footer-top .footer-links ul a {
+    color: var(--txt-color-2);
+    transition: 0.3s;
+    display: inline-block;
+    line-height: 1;
+}
+
+#footer .footer-top .footer-links ul a:hover {
+    color: var(--main-color-hover);
+}
+
+#footer .footer-top .footer-newsletter form {
+    margin-top: 30px;
+    background: var(--bg-color-2);
+    padding: 6px 10px;
+    position: relative;
+    border: 1px solid var(--bg-glass);
+    border-top-left-radius: var(--radius-huge);
+    border-bottom-left-radius: var(--radius-huge);
+}
+
+#footer .footer-top .footer-newsletter form input[type=email] {
+    border: unset;
+    padding: 4px;
+    width: calc(100% - 110px);
+    background-color: var(--bg-color-2);
+}
+
+#footer .footer-top .footer-newsletter form input[type=submit] {
+    position: absolute;
+    top: -1px;
+    right: -1px;
+    bottom: -1px;
+    border: 0;
+    background: none;
+    font-size: 16px;
+    padding: 0 20px;
+    background: var(--main-color);
+    color: #fff;
+    transition: 0.3s;
+    border-radius: 0 var(--radius-huge) var(--radius-huge) 0;
+    font-family: var(--base-font);
+}
+
+#footer .footer-top .footer-newsletter form input[type=submit]:hover {
+    background: var(--main-color-hover);
+}
+
+#footer .copyright {
+    text-align: center;
+    padding-top: 30px;
+}
+
+#footer .credits {
+    padding-top: 10px;
+    text-align: center;
+    font-size: 13px;
 }
 
 /*================================================================
